--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -10,23 +10,38 @@
 
 .navigation-container {
   display: flex;
+  // media
+  @include media($mobile) {
+    display: block;
+  }
+
 }
 
 .navigation {
   display: flex;
   justify-content: flex-end;
   width: calc(100% - #{$space-48});
-}
 
-.nav-mobile,
-.nav-link,
-.nav-resume {
-  @extend %black-letter;
-  color: $white;
-  display: block;
-  font-size: rem(12);
-  padding: $space-16;
-  text-decoration: none;
+  // media
+  @include media($mobile) {
+    background: rgba($black, .96);
+    border-top: solid rem(2) $white;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: calc(100vh - #{$space-48});
+    width: rem(256);
+    position: absolute;
+    top: $space-48;
+    right: 0;
+    transform: translate3d(100%, 0, 0);
+    transition: $normal;
+
+    &[data-open="true"] {
+      transform: translate3d(0, 0, 0);
+    }
+
+  }
+
 }
 
 .nav-home {
@@ -52,30 +67,31 @@
 
 }
 
-.nav-mobile {
+.nav-link,
+.nav-mobile,
+.nav-resume {
+  @extend %black-letter;
+  color: $white;
+  display: block;
+  font-size: rem(12);
+  padding: $space-16;
+  text-decoration: none;
+  max-height: $space-48;
+}
+
+.nav-link,
+.nav-resume {
 
   // media
-  @include media($tablet-up) {
-    display: none;
+  @include media($mobile) {
+    border-bottom: solid rem(1) rgba($white, .04);
+    text-align: right;
   }
 
 }
 
 .nav-link {
   position: relative;
-
-  &:after {
-    content: "";
-    background: $cyan;
-    position: absolute;
-    height: rem(2);
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    transform: scale(0, 1);
-    transform-origin: 0 0;
-    transition: inherit;
-  }
 
   &:focus,
   &:hover {
@@ -87,16 +103,68 @@
 
   }
 
+  // media
+  @include media($tablet-up) {
+
+    &:after {
+      content: "";
+      background: $cyan;
+      position: absolute;
+      height: rem(2);
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      transform: scale(0, 1);
+      transform-origin: 0 0;
+      transition: inherit;
+    }
+
+  }
+
 }
 
-.nav-resume {
-  background: $red-d;
-  color: $white;
+.nav-mobile {
+  float: right;
+
+  &[aria-expanded="true"] {
+    background: $red-l;
+    color: $white;
+    @include shadow(0, 2, black, .48);
+  }
 
   &:focus,
   &:hover {
-    background: $red-l;
-    @include shadow(0, 2, black, .48);
+    color: $white;
+  }
+
+  // media
+  @include media($tablet-up) {
+    display: none;
+  }
+
+}
+
+.nav-resume {
+
+  // media
+  @include media($tablet-up) {
+    background: $red-d;
+    color: $white;
+
+    &:focus,
+    &:hover {
+      background: $red-l;
+      @include shadow(0, 2, black, .48);
+    }
+
+  }
+  @include media($mobile) {
+
+    &:focus,
+    &:hover {
+      color: $cyan;
+    }
+
   }
 
 }
