--- a/src/components/section/_section.scss
+++ b/src/components/section/_section.scss
@@ -1,3 +1,26 @@
+.section {
+
+  &.black,
+  &.white {
+
+    .heading-primary {
+      color: $red-d;
+    }
+
+  }
+
+  &.black {
+    background: $black;
+    color: $white;
+  }
+
+  &.red {
+    background: $red-d;
+    color: $white;
+  }
+
+}
+
 [data-section="default"] {
   padding: 16vh 0;
 
